src/link/styles.scss
/*
 Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 SPDX-License-Identifier: Apache-2.0
*/

@use 'sass:map';
@use '../internal/styles' as styles;
@use '../internal/styles/tokens' as awsui;
@use '../internal/hooks/focus-visible' as focus-visible;
@use './constants' as constants;

.link {
  @include styles.styles-reset;
  display: inline;
  white-space: inherit;
  @include styles.link-default;

  @each $variant in map.keys(constants.$link-variants) {
    &.variant-#{$variant} {
      @if $variant == 'info' {
        @include styles.font-smoothing;
      }
      @if $variant == 'secondary' {
        -webkit-font-smoothing: inherit;
        -moz-osx-font-smoothing: inherit;
      }
      @include styles.link-variant-style(map.get(constants.$link-variants, $variant));
    }
  }

  &.button {
    @include styles.font-smoothing;
    @include styles.link-variant-style(map.get(constants.$link-styles, 'button'));
  }

  &.color-inverted {
    color: awsui.$color-text-notification-default;
    &:not(.button) {
      text-decoration-line: underline;
      text-decoration-color: currentColor;
    }
    &:hover {
      color: awsui.$color-text-link-inverted-hover;
    }
  }

  @include focus-visible.when-visible {
    @include styles.link-focus;
  }

  @each $font-size, $properties in constants.$link-font-sizes {
    &.font-size-#{$font-size} {
      @include styles.font($font-size);
      @include styles.link-font-size-style(map.get(constants.$link-font-sizes, $font-size));
    }
  }
}

.icon-wrapper {
  white-space: nowrap;
}

.icon {
  display: inline-block;
}

